@@ -1894,6 +1894,145 @@ name|build
 argument_list|()
 return|;
 block|}
+specifier|private
+name|boolean
+name|nodeProcessed
+parameter_list|(
+name|Expression
+name|node
+parameter_list|)
+block|{
+comment|// must be in sync with expressionNodeToSqlNode() method
+switch|switch
+condition|(
+name|node
+operator|.
+name|getType
+argument_list|()
+condition|)
+block|{
+case|case
+name|NOT_IN
+case|:
+case|case
+name|IN
+case|:
+case|case
+name|NOT_BETWEEN
+case|:
+case|case
+name|BETWEEN
+case|:
+case|case
+name|NOT
+case|:
+case|case
+name|BITWISE_NOT
+case|:
+case|case
+name|EQUAL_TO
+case|:
+case|case
+name|NOT_EQUAL_TO
+case|:
+case|case
+name|LIKE
+case|:
+case|case
+name|NOT_LIKE
+case|:
+case|case
+name|LIKE_IGNORE_CASE
+case|:
+case|case
+name|NOT_LIKE_IGNORE_CASE
+case|:
+case|case
+name|OBJ_PATH
+case|:
+case|case
+name|DB_PATH
+case|:
+case|case
+name|FUNCTION_CALL
+case|:
+case|case
+name|ADD
+case|:
+case|case
+name|SUBTRACT
+case|:
+case|case
+name|MULTIPLY
+case|:
+case|case
+name|DIVIDE
+case|:
+case|case
+name|NEGATIVE
+case|:
+case|case
+name|BITWISE_AND
+case|:
+case|case
+name|BITWISE_LEFT_SHIFT
+case|:
+case|case
+name|BITWISE_OR
+case|:
+case|case
+name|BITWISE_RIGHT_SHIFT
+case|:
+case|case
+name|BITWISE_XOR
+case|:
+case|case
+name|OR
+case|:
+case|case
+name|AND
+case|:
+case|case
+name|LESS_THAN
+case|:
+case|case
+name|LESS_THAN_EQUAL_TO
+case|:
+case|case
+name|GREATER_THAN
+case|:
+case|case
+name|GREATER_THAN_EQUAL_TO
+case|:
+case|case
+name|TRUE
+case|:
+case|case
+name|FALSE
+case|:
+case|case
+name|ASTERISK
+case|:
+case|case
+name|EXISTS
+case|:
+case|case
+name|SUBQUERY
+case|:
+case|case
+name|ENCLOSING_OBJECT
+case|:
+case|case
+name|FULL_OBJECT
+case|:
+return|return
+literal|true
+return|;
+block|}
+return|return
+literal|false
+return|;
+block|}
 annotation|@
 name|Override
 specifier|public
@@ -1928,6 +2067,14 @@ return|return;
 block|}
 if|if
 condition|(
+name|nodeProcessed
+argument_list|(
+name|node
+argument_list|)
+condition|)
+block|{
+if|if
+condition|(
 name|currentNode
 operator|.
 name|getParent
@@ -1943,6 +2090,7 @@ operator|.
 name|getParent
 argument_list|()
 expr_stmt|;
+block|}
 block|}
 block|}
 annotation|@
