@@ -53,6 +53,38 @@ name|access
 operator|.
 name|sqlbuilder
 operator|.
+name|SQLGenerationVisitor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|access
+operator|.
+name|sqlbuilder
+operator|.
+name|StringBuilderAppendable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|access
+operator|.
+name|sqlbuilder
+operator|.
 name|sqltree
 operator|.
 name|BetweenNode
@@ -618,6 +650,34 @@ operator|.
 name|addAttribute
 argument_list|(
 name|attribute
+argument_list|)
+expr_stmt|;
+name|ObjAttribute
+name|attribute2
+init|=
+operator|new
+name|ObjAttribute
+argument_list|()
+decl_stmt|;
+name|attribute2
+operator|.
+name|setName
+argument_list|(
+literal|"b"
+argument_list|)
+expr_stmt|;
+name|attribute2
+operator|.
+name|setDbAttributePath
+argument_list|(
+literal|"b"
+argument_list|)
+expr_stmt|;
+name|entity
+operator|.
+name|addAttribute
+argument_list|(
+name|attribute2
 argument_list|)
 expr_stmt|;
 name|entity
@@ -3668,6 +3728,92 @@ argument_list|)
 operator|)
 operator|.
 name|getText
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|translateComplexAnd
+parameter_list|()
+block|{
+name|Node
+name|and
+init|=
+name|translate
+argument_list|(
+literal|"a< 2 and b in (5,6) and b = 7"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|and
+argument_list|)
+expr_stmt|;
+name|assertThat
+argument_list|(
+name|and
+argument_list|,
+name|instanceOf
+argument_list|(
+name|OpExpressionNode
+operator|.
+name|class
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"AND"
+argument_list|,
+operator|(
+operator|(
+name|OpExpressionNode
+operator|)
+name|and
+operator|)
+operator|.
+name|getOp
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|and
+operator|.
+name|getChildrenCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|SQLGenerationVisitor
+name|visitor
+init|=
+operator|new
+name|SQLGenerationVisitor
+argument_list|(
+operator|new
+name|StringBuilderAppendable
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|and
+operator|.
+name|visit
+argument_list|(
+name|visitor
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|" ( t0.a< 2 ) AND t0.b IN ( 5, 6) AND ( t0.b = 7 )"
+argument_list|,
+name|visitor
+operator|.
+name|getSQLString
 argument_list|()
 argument_list|)
 expr_stmt|;
